TikZ練習帳を追加

--- a/Crowbar_Circuit.tex
+++ b/Crowbar_Circuit.tex
@@ -148,6 +148,14 @@
 \end{equation}
 %
 となる。今オシロ側はインピーダンスマッチングするため\SI{50}{\ohm}のスルータイプのターミネーターで終端してるから$R_o=R_i=\SI{50}{\ohm}$となって$V_m=V/2$となり、CTで測定された電圧$V$はオシロで測定された電圧$V_m$の2倍になる事に注意。したがって、測定結果は\SI{800}{A\per V}となる。
+%
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=12cm]{figs/Term_Att.pdf}
+    \caption{ターミネーターとアッテネーター.}
+    \label{fig:Term_Att}
+  \end{center}
+\end{figure}
 
 \section{短絡試験の等価回路}
 \begin{figure}[htbp]
